# hash-turbo

./: .gitignore  README.md  THIRD-PARTY-LICENSES.md  babel.cfg  hash-turbo-macos.spec  hash-turbo.spec  pyproject.toml  version_info.py
.github/: copilot-instructions.md
.github/agents/: code-reviewer.agent.md  screenshot-docs.agent.md  senior-python-engineer.md  video-tutorial.agent.md
.github/hooks/: pre-commit-check.json  screenshot-reminder.json
.github/instructions/: docs-screenshots.instructions.md  testing-conventions.instructions.md
.github/prompts/: release.prompt.md  run-e2e-tests.prompt.md  scaffold-module.prompt.md  update-docs.prompt.md
assets/: icon.icns
docs/: SPEC.md  user-manual.md
installer/: hash-turbo.wxs
scripts/: _video_common.py  build_macos.sh  build_windows.ps1  capture_screenshots.py  generate_pdf.py  hook_pre_commit_check.py  hook_screenshot_reminder.py  populate_translations.py  record_sanitize_video.py  record_settings_video.py  record_video.py  regenerate_translations.py
src/hash_turbo/: __init__.py
tests/: conftest.py
tests/cli/: test_app.py  test_formatters.py  test_sanitize.py  test_verify.py
tests/core/: test_dynamic_algorithm.py  test_exclude_filter.py  test_hash_file.py  test_hasher.py  test_models.py  test_path_key.py  test_sanitizer.py  test_verifier.py  test_verify_with_lookup.py
tests/gui/: conftest.py  test_hash_view.py  test_qml_e2e.py  test_sanitize_view.py  test_verify_view.py  test_verify_worker_retry.py
tests/i18n/: test_translator.py
tests/infra/: test_atomic_write.py  test_executor.py  (+5 more)
(+44 files in other folders)
